adding mail properties to application.properties.

--- a/home_service_spring_boot/homeservices/src/main/resources/messages_en_us.properties
+++ b/home_service_spring_boot/homeservices/src/main/resources/messages_en_us.properties
@@ -31,7 +31,6 @@ password=password not valid
 service.not.found=Service does not exist
 service.duplicate=This service already exist
 duplicate.username=Username is already exist
-duplicate.email=Email is already exist
 specialist.not.found=Specialist with id {0} not found
 specialist.id.not.found=Specialist with id {0} not found
 login.specialist.not.found=Specialist with username {0} not found
@@ -51,6 +50,7 @@ balance.not.blank=Balance can not be empty
 comment.add=Comment for order with id {0} successfully added
 user.not.found=User with id {0} not found
 service.to.specialist.add=Service with name "{0}" successfully added
+duplicate.email=This email address is already exist
 
 
 
