adding message to messages_en_us.properties

--- a/home_service_spring_boot/homeservices/src/main/resources/messages_en_us.properties
+++ b/home_service_spring_boot/homeservices/src/main/resources/messages_en_us.properties
@@ -12,11 +12,12 @@ suggestion.price=Price cant be null
 suggestion.work.duration=Work duration cant be null
 manager.username=Username must be between 8 nd 12 character
 card.number.blank=card number cant be blank
+rate.null=rate cant be empty
 card.number=card number should be 16 digit number
 card.pass.blank=Dynamic password cant be blank
 card.pass=Dynamic password must contain 5 digit number
 cvv2.blank=CCV2 cant be blank
-cvv2=CCV2 must contain 4 digit number
+cvv2=CCV2 must contain 3 or 4 digit number
 year.blank=Year cant be blank
 year.size=Year must be between 00 nd 99
 month.blank=Month cant be blank
@@ -26,11 +27,12 @@ image=Upload an image
 username=username must be at least 8 character and digit
 username.blank=Username cant be blank
 password=password not valid
+user.not.found1=Customer not found
 
 
 service.not.found=Service does not exist
 service.duplicate=This service already exist
-duplicate.username=Username is already exist
+duplicate.username=Username is already exist please sign in
 specialist.not.found=Specialist with id {0} not found
 specialist.id.not.found=Specialist with id {0} not found
 login.specialist.not.found=Specialist with username {0} not found
@@ -51,6 +53,14 @@ comment.add=Comment for order with id {0} successfully added
 user.not.found=User with id {0} not found
 service.to.specialist.add=Service with name "{0}" successfully added
 duplicate.email=This email address is already exist
+verification.not.submit=An activation link has been sent to your email. Please enable it before logging in
+user.is.checking=The user with username "{0}" is on checking process
+username.not.blank=Username can not be empty
+username.length=Username length should be between 2 and 30 character
+user.status.update=user with id "{0}" successfully approve
+service.added=Service "{0}" successfully added
+subService.add=Sub-service successfully added.
+
 
 
 
@@ -74,7 +84,9 @@ old.pass.incorrect=Old password is incorrect
 order.accept=Order Successfully accepted
 change.status.to.WAITING_FOR_SPECIALIST_COME=change status to WAITING_FOR_SPECIALIST_COME
 change.status.to.started=Change status to STARTED
-change.status.to.finished=Order is finished and now waiting for pay
+change.status.to.finished=Order is successfully finished
 wait.for.pay=This order is waiting for pay
 subService.price.low=Price is too low, the base price for this service is {0}T
 service.exist.in.specialist.service.list=Specialist already has service with name "{0}"
+current.balance.increase=Your balance: {0} Toman
+Your.order.is.waiting.for.expert.suggestion=Order is waiting for specialist offer
